<resources>
    <string name="app_name">PrivateProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu">Menu</string>
    <string name="calendar">Calendar</string>
    <string name="approval">Approvals</string>
    <string name="assistance">Assistance</string>
    <string name="orders">Orders</string>
    <string name="devices">Devices</string>
    <string name="plus">+</string>
    <string name="customers">Customers</string>
    <string name="help">Help</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="available_balance">Available Balance:</string>
    <string name="requested">Requested:</string>
    <string name="history">History:</string>
    <string name="claimed">CLAIMED</string>


</resources>
